@@ -101,7 +101,7 @@ finalize(LocalEnv *env, Context *context, ups_status_t status, Txn *local_txn)
 
   if (local_txn) {
     context->changeset.clear();
-    env->txn_manager->commit(local_txn);
+    return env->txn_manager->commit(local_txn);
   }
   return 0;
 }
