@@ -1,6 +1,10 @@
 Jun 29, 2016 - chris ---------------------------------------------------
 o issue #80: fixed streamvbyte compilation for c++11
 
+May 04, 2016 - chris ---------------------------------------------------
+o issue #79: fixed crc32 failure when reusing deleted blobs spanning
+	multiple pages
+
 Apr 27, 2016 - chris ---------------------------------------------------
 o Fixed a bug when recovering duplicates that were inserted with one of the
 	UPS_DUPLICATE_INSERT_* flags
